[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/background_desert.png" id="2_bg"]
[ext_resource type="PackedScene" path="res://scenes/train.tscn" id="3_train"]
[ext_resource type="AudioStream" path="res://assets/success.wav" id="4_match"]
[ext_resource type="AudioStream" path="res://assets/fail.wav" id="5_miss"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ground"]
normal = Vector2(0, -1)

[node name="Main" type="Node2D"]
script = ExtResource("1_script")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("2_bg")
centered = false
scale = Vector2(1.25, 1.25)

[node name="Train" parent="." instance=ExtResource("3_train")]
position = Vector2(1200, 550)


[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(640, 700)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("WorldBoundaryShape2D_ground")

[node name="MatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_match")
volume_db = -10.0

[node name="MissSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_miss")
volume_db = -5.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
